tests/NormalTests/paczka1/fuzzy1/52974637.err
Error in line 7: wXi A184 35,1
Error in line 6: JC3Fx0Vf A184 87,8
Error in line 11: JC3Fx0Vf A693 52,7
Error in line 19: A482 S377 96,6
Error in line 17: xGBkC5CvYgb A693 0,1
